<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InvoiceActivity">

    <include layout="@layout/toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/view_color"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lay_inv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/header_invoice"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/app_button_color"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cust_detail"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center|left"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"/>

                <ImageView
                    android:id="@+id/ivInvoiceItems"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_70"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"/>

                <TextView
                    android:id="@+id/invName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/app_button_color"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/aqua"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:id="@+id/invQuant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:gravity="center"
                    android:layout_weight="1.3"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/invPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/invSubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:gravity="center"
                    android:layout_weight="1.2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:gravity="end"
                    android:layout_weight="1.5"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/invSubTotalT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gst_18"
                    android:gravity="end"
                    android:layout_weight="1.6"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/invGst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gst"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/aqua"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_weight="1.6"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/invTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:gravity="center"
                    android:layout_weight="1.2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"/>



            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thankyou_for_shopping_with_us"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_visit_again"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textColor="@color/black"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>