<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AppSettingActivity">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:layout_gravity="top"
            android:background="@color/view_color"/>

        <LinearLayout
            android:id="@+id/llTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textSize="@dimen/text_size_16"
                android:paddingLeft="@dimen/dp_6"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivTCArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/right_arrow"
                android:contentDescription="@string/tcarrow"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTermsCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"
            android:paddingLeft="@dimen/dp_6"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:textColor="@color/light_grey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="top"
            android:background="@color/light_grey"/>

        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/text_size_16"
                android:layout_weight="1"
                android:paddingLeft="@dimen/dp_6"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivPPArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/right_arrow"
                android:contentDescription="@string/pparrow"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_6"
            android:textColor="@color/light_grey"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="top"
            android:background="@color/light_grey"/>


    </LinearLayout>
</LinearLayout>
